# mobile_manipulator

mobile_manipulator_control/: CMakeLists.txt  package.xml
mobile_manipulator_control/config/: r1_ros2_controllers.yaml  ros2_controllers.yaml  ros2_controllers_template.yaml
mobile_manipulator_control/launch/: mock_controller.launch.py
mobile_manipulator_description/: CMakeLists.txt  package.xml
mobile_manipulator_description/config/: control.yaml  ros2_controllers.yaml
mobile_manipulator_description/env/: ign_resource_path.dsv.in
mobile_manipulator_description/launch/: display.launch.py
mobile_manipulator_description/launch-1/: display1.launch.py
mobile_manipulator_description/rviz/: display.rviz
mobile_manipulator_description/urdf/: constants.xacro  joints.xacro  links.xacro  materials.xacro  mobile_manipulator.urdf  mobile_manipulator.urdf.xacro  mobile_manipulator_gazebo.xacro  mobile_manipulator_ros2_control.xacro  sensors.xacro
mobile_manipulator_ignition/: CMakeLists.txt  package.xml
mobile_manipulator_ignition/config/: ros_gz_bridge.yaml  ros_gz_bridge_r1.yaml  ros_gz_bridge_template.yaml
mobile_manipulator_ignition/launch/: ignition.launch.py  ignition1.launch.py  mobile_manipulator_multi_robot.launch.py  mobile_manipulator_robot.launch.py  mock_controller.launch.py
mobile_manipulator_ignition/worlds/: empty.world  empty_world.world  empty_world1.world  pick_place.world
