cmake_minimum_required(VERSION 3.8)
project(mobile_manipulator_ignition)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)

install (
  DIRECTORY config launch worlds
  DESTINATION share/${PROJECT_NAME}
)

ament_environment_hooks(
     "${CMAKE_CURRENT_SOURCE_DIR}/env/ign_resource_path.dsv.in"
   )

ament_package()
